--- a/src/app/dashboard/calendar.css
+++ b/src/app/dashboard/calendar.css
@@ -1,21 +1,40 @@
-.rdp-day_selected {
-  background-color: rgb(15 23 42) !important;  /* slate-900 */
-  color: white !important;
+.rdp-day_selected,
+.rdp-day_range_start,
+.rdp-day_range_end,
+.rdp-day_range_middle {
+    background-color: rgb(15 23 42) !important;
+    color: white !important;
+    border: none !important;
 }
 
-.rdp-day_selected:hover {
-  background-color: rgb(15 23 42) !important;  /* slate-900 */
-  color: white !important;
+.rdp-day_selected:hover,
+.rdp-day_range_start:hover,
+.rdp-day_range_end:hover,
+.rdp-day_range_middle:hover {
+    background-color: rgb(15 23 42) !important;
+    color: white !important;
+    border: none !important;
 }
 
-.rdp-day_range_start, 
-.rdp-day_range_end {
-  background-color: rgb(15 23 42) !important;  /* slate-900 */
-  color: white !important;
+.rdp-day_selected button,
+.rdp-day_range_start button,
+.rdp-day_range_end button {
+    color: white !important;
 }
 
-.rdp-day_range_start:hover, 
-.rdp-day_range_end:hover {
-  background-color: rgb(15 23 42) !important;  /* slate-900 */
-  color: white !important;
+.rdp-day_selected button:hover,
+.rdp-day_range_start button:hover,
+.rdp-day_range_end button:hover {
+    color: white !important;
+    background-color: rgb(15 23 42) !important;
+}
+
+/* For the days between the range */
+.rdp-day_range_middle {
+    background-color: rgb(241 245 249) !important; /* slate-100 */
+    color: rgb(15 23 42) !important;
+}
+
+.rdp-day_range_middle button {
+    color: rgb(15 23 42) !important;
 }
