--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .no-scrollbar {
+    -ms-overflow-hidden: none;
+    scrollbar-width: none;
+  }
+}
