--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,20 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  html {
+    @apply h-full antialiased;
+  }
+
+  #__next,
+  main {
+    @apply min-h-screen;
+  }
+
+  /* Height for regular content */
+  .content-wrapper {
+    @apply w-full h-auto;
+  }
 }
 
 @layer utilities {
